--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2411,57 +2411,56 @@ input, select, textarea {
 
 /* Image */
 
-	.image {
-		border-radius: 5px;
-		border: 0;
-		display: inline-block;
-		position: relative;
-	}
+.image {
+  border: 0;
+  display: inline-block;
+  position: relative;
+}
 
-		.image img {
-			border-radius: 5px;
-			display: block;
-		}
+.image img {
+  display: block;
+}
 
-		.image.left, .image.right {
-			max-width: 40%;
-		}
+.image.left, .image.right {
+  max-width: 40%;
+}
 
-			.image.left img, .image.right img {
-				width: 100%;
-			}
+.image.left img, .image.right img {
+  width: 300px; /* or any other value you want */
+  height: 300px; /* set the same value as width */
+}
 
-		.image.left {
-			float: left;
-			padding: 0 1.5em 1em 0;
-			top: 0.25em;
-		}
+.image.left {
+  float: left;
+  padding: 0 1.5em 1em 0;
+  top: 0.25em;
+}
 
-		.image.right {
-			float: right;
-			padding: 0 0 1em 1.5em;
-			top: 0.25em;
-		}
+.image.right {
+  float: right;
+  padding: 0 0 1em 1.5em;
+  top: 0.25em;
+}
 
-		.image.fit {
-			display: block;
-			margin: 0 0 2em 0;
-			width: 100%;
-		}
+.image.fit {
+  display: block;
+  margin: 0 0 2em 0;
+  width: 100%;
+}
 
-			.image.fit img {
-				width: 100%;
-			}
+.image.fit img {
+  width: 100%;
+}
 
-		.image.main {
-			display: block;
-			margin: 0 0 3em 0;
-			width: 100%;
-		}
+.image.main {
+  display: block;
+  margin: 0 0 3em 0;
+  width: 100%;
+}
 
-			.image.main img {
-				width: 100%;
-			}
+.image.main img {
+  width: 100%;
+}
 
 /* List */
 
@@ -3025,10 +3024,12 @@ input, select, textarea {
 				width: calc(100% + 3.5em);
 			}
 
-				.features article .image img {
-					border-radius: 5px 5px 0 0;
-					width: 100%;
-				}
+                .features article .image img {
+                  border-radius: 0;
+                  height: 100%;
+                  object-fit: cover;
+                  width: 100%;
+                }
 
 		@media screen and (max-width: 980px) {
 
@@ -3725,9 +3726,9 @@ input, select, textarea {
 		}
 
 		.wrapper .inner {
-			padding: 3em 0 1em 0 ;
+			padding: 0em 0 1em 0 ;
 			margin: 0 auto;
-			width: 55em;
+			width: 70em;
 		}
 
 		.wrapper.style2 {
@@ -3841,18 +3842,19 @@ input, select, textarea {
 				flex-direction: row;
 			}
 
-			.wrapper.spotlight .image {
-				border-radius: 100%;
-				margin: 0 3em 2em 0;
-				width: 22em;
-				overflow: hidden;
-				-ms-flex: 1;
-			}
+.wrapper.spotlight .image {
+  border-radius: 5px;
+  margin: 0 3em 2em 0;
+  width: 50em; /* increased width value */
+  overflow: hidden;
+  -ms-flex: 1;
+}
 
-				.wrapper.spotlight .image img {
-					border-radius: 100%;
-					width: 100%;
-				}
+.wrapper.spotlight .image img {
+  border-radius: 5px;
+  width: 100%;
+}
+
 
 			.wrapper.spotlight .content {
 				width: 100%;
